unpackaged/main/default/objects/ebotdata__Bot_Session__c/ebotdata__Bot_Session__c.object-meta.xml
<CustomObject>
    <description>The Bot Session object that captures info about the session between Bot and end-user</description>
    <label>Bot Session</label>
    <nameField>
        <displayFormat>BOS-{00000}</displayFormat>
        <label>Bot Session Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bot Sessions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>