unpackaged/main/default/objects/ebotdata__Bot_Session__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <label>Brand</label>
    <length>40</length>
    <type>Text</type>
</CustomField>