unpackaged/main/default/objects/ebotdata__Bot_Session__c/fields/CarouselContent__c.field-meta.xml
<CustomField>
    <fullName>CarouselContent__c</fullName>
    <label>CarouselContent</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>