unpackaged/main/default/objects/ebotdata__Bot_Session__c/fields/ebotdata__Abandoned_Type__c.field-meta.xml
<CustomField>
    <fullName>ebotdata__Abandoned_Type__c</fullName>
    <formula>IF( ebotdata__Outcome__c = &quot;Case Deflection&quot; &amp;&amp; ebotdata__Contained_Type__c = &quot;Flow Not Completed&quot; &amp;&amp; ebotdata__Business_Dialog_Reached__c = true, &quot;Flow Started&quot;, IF( ebotdata__Outcome__c = &quot;Case Deflection&quot; &amp;&amp; ebotdata__Contained_Type__c = &quot;Flow Not Completed&quot; &amp;&amp; ebotdata__Business_Dialog_Reached__c = false, &quot;Flow Not Started&quot;, NULL))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Flow Not Completed Type</label>
    <type>Text</type>
</CustomField>