unpackaged/main/default/objects/ebotdata__Bot_Session__c/fields/ebotdata__Agent_Average_Response_Time__c.field-meta.xml
<CustomField>
    <fullName>ebotdata__Agent_Average_Response_Time__c</fullName>
    <formula>ebotdata__Live_Chat_Transcript__r.AverageResponseTimeOperator</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agent Average Response Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>