unpackaged/main/default/objects/ebotdata__Bot_Session__c/fields/ebotdata__Agent_Handle_Time__c.field-meta.xml
<CustomField>
    <fullName>ebotdata__Agent_Handle_Time__c</fullName>
    <formula>ebotdata__Live_Chat_Transcript__r.ChatDuration - ebotdata__Einstein_Bot_Duration__c - ebotdata__System_Wait_Time__c - ebotdata__Agent_Wait_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agent Handle Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>