unpackaged/main/default/objects/ebotdata__Bot_Session__c/fields/ebotdata__Agent_Initial_Response_Time__c.field-meta.xml
<CustomField>
    <fullName>ebotdata__Agent_Initial_Response_Time__c</fullName>
    <description>[time between escalation and agent accept] + [time between agent accept and agent’s first input (not autogreeting)]</description>
    <label>Agent Initial Response Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>