unpackaged/main/default/objects/ebotdata__Bot_Session__c/fields/ebotdata__Agent_Message_Count__c.field-meta.xml
<CustomField>
    <fullName>ebotdata__Agent_Message_Count__c</fullName>
    <formula>ebotdata__Live_Chat_Transcript__r.OperatorMessageCount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agent Message Count</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>