unpackaged/main/default/objects/ebotdata__Bot_Session__c/fields/ebotdata__Agent_Wait_Time__c.field-meta.xml
<CustomField>
    <fullName>ebotdata__Agent_Wait_Time__c</fullName>
    <description>Time an agent spent in accepting a chat request, once it is been transferred from the chat button</description>
    <label>Agent Wait Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>