unpackaged/main/default/objects/ebotdata__Bot_Session__c/fields/ebotdata__BackgroundOperationLookup__c.field-meta.xml
<CustomField>
    <fullName>ebotdata__BackgroundOperationLookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BackgroundOperationLookup</label>
    <referenceTo>BackgroundOperation</referenceTo>
    <relationshipLabel>Bot Sessions</relationshipLabel>
    <relationshipName>Background_Operations</relationshipName>
    <type>Lookup</type>
</CustomField>