unpackaged/main/default/objects/ebotdata__Bot_Session__c/fields/ebotdata__Batch_Logging_Details__c.field-meta.xml
<CustomField>
    <fullName>ebotdata__Batch_Logging_Details__c</fullName>
    <label>Batch Logging Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>