unpackaged/main/default/objects/ebotdata__Bot_Session__c/fields/ebotdata__Bot_Invocation_Time__c.field-meta.xml
<CustomField>
    <fullName>ebotdata__Bot_Invocation_Time__c</fullName>
    <description>Time difference from when the e-bot call to action is clicked and the e-bot accepts the chat request</description>
    <inlineHelpText>Time difference from when the e-bot call to action is clicked and the e-bot accepts the chat request</inlineHelpText>
    <label>Bot Invocation Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>