unpackaged/main/default/objects/ebotdata__Bot_Session__c/fields/ebotdata__BotDuration__c.field-meta.xml
<CustomField>
    <fullName>ebotdata__BotDuration__c</fullName>
    <label>DO NOT USE - BotDuration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>