unpackaged/main/default/objects/ebotdata__Bot_Session__c/fields/ebotdata__BotName__c.field-meta.xml
<CustomField>
    <fullName>ebotdata__BotName__c</fullName>
    <label>BotName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>