unpackaged/main/default/objects/ebotdata__Bot_Session__c/fields/ebotdata__BotVersionNumber__c.field-meta.xml
<CustomField>
    <fullName>ebotdata__BotVersionNumber__c</fullName>
    <label>BotVersionNumber</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>