unpackaged/main/default/objects/ebotdata__Bot_Session__c/fields/ebotdata__Business_Dialog_Reached__c.field-meta.xml
<CustomField>
    <fullName>ebotdata__Business_Dialog_Reached__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Boolean value evaluated by the Einstein Bot Reporting Batch, if checked the transcript has gone through the business dialog intent</description>
    <label>Business Dialog Reached</label>
    <type>Checkbox</type>
</CustomField>