unpackaged/main/default/objects/ebotdata__Bot_Session__c/fields/ebotdata__Case__c.field-meta.xml
<CustomField>
    <fullName>ebotdata__Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Case</description>
    <inlineHelpText>Case</inlineHelpText>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Bot Sessions</relationshipLabel>
    <relationshipName>Bot_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>