unpackaged/main/default/objects/ebotdata__Bot_Session__c/fields/ebotdata__Chat_Button_Id__c.field-meta.xml
<CustomField>
    <fullName>ebotdata__Chat_Button_Id__c</fullName>
    <description>Live chat Button Id</description>
    <inlineHelpText>Live chat Button Id</inlineHelpText>
    <label>Chat Button Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>