unpackaged/main/default/objects/ebotdata__Bot_Session__c/fields/ebotdata__Chat_Button_Name__c.field-meta.xml
<CustomField>
    <fullName>ebotdata__Chat_Button_Name__c</fullName>
    <description>Live chat Button Name</description>
    <inlineHelpText>Live chat Button Name</inlineHelpText>
    <label>Chat Button Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>