unpackaged/main/default/objects/ebotdata__Bot_Session__c/fields/ebotdata__Chat_Channel__c.field-meta.xml
<CustomField>
    <fullName>ebotdata__Chat_Channel__c</fullName>
    <description>The device information from where the chat originated.</description>
    <label>Chat Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>Desktop</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>