unpackaged/main/default/objects/ebotdata__Bot_Session__c/fields/ebotdata__Chat_Page__c.field-meta.xml
<CustomField>
    <fullName>ebotdata__Chat_Page__c</fullName>
    <label>Chat Page</label>
    <length>255</length>
    <type>Text</type>
</CustomField>