unpackaged/main/default/objects/ebotdata__Bot_Session__c/fields/ebotdata__Chatbot_Case_Created__c.field-meta.xml
<CustomField>
    <fullName>ebotdata__Chatbot_Case_Created__c</fullName>
    <formula>IF(&#39;Outcome&#39; = &quot;Attempted to Escalate&quot; &amp;&amp; NOT(ISBLANK(&#39;CaseId&#39;)), &quot;Case Created&quot;, IF(&#39;Outcome&#39; != &quot;Attempted to Escalate&quot; &amp;&amp;(ISBLANK(&#39;CaseId&#39;)), &quot;No Case Created&quot;, NULL))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Chatbot Case Created</label>
    <type>Text</type>
</CustomField>