unpackaged/main/default/objects/ebotdata__Bot_Session__c/fields/ebotdata__ChatSessionId__c.field-meta.xml
<CustomField>
    <fullName>ebotdata__ChatSessionId__c</fullName>
    <label>ChatSessionId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>