unpackaged/main/default/objects/ebotdata__Bot_Session__c/fields/ebotdata__Contained_Type__c.field-meta.xml
<CustomField>
    <fullName>ebotdata__Contained_Type__c</fullName>
    <formula>IF(ebotdata__Outcome__c = &quot;Case Deflection&quot; &amp;&amp; ebotdata__Self_Served_Dialog_Reached__c = true, &quot;Flow Completed&quot;, IF(ebotdata__Outcome__c = &quot;Case Deflection&quot; &amp;&amp; ebotdata__Self_Served_Dialog_Reached__c = false, &quot;Flow Not Completed&quot;, NULL))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Deflection Type</label>
    <type>Text</type>
</CustomField>