unpackaged/main/default/objects/ebotdata__Bot_Session__c/fields/ebotdata__Einstein_Analytics_Reporting_Process__c.field-meta.xml
<CustomField>
    <fullName>ebotdata__Einstein_Analytics_Reporting_Process__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, the record is picked by the Einstein Bot Reporting Batch Processor</description>
    <label>Einstein Analytics Reporting Process</label>
    <type>Checkbox</type>
</CustomField>