unpackaged/main/default/objects/ebotdata__Bot_Session__c/fields/ebotdata__Einstein_Bot_Duration__c.field-meta.xml
<CustomField>
    <fullName>ebotdata__Einstein_Bot_Duration__c</fullName>
    <description>Indicates the total time an Einstein Bot spent on an user in one session</description>
    <label>Einstein Bot Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>