unpackaged/main/default/objects/ebotdata__Bot_Session__c/fields/ebotdata__Einstein_Bot_Escalation__c.field-meta.xml
<CustomField>
    <fullName>ebotdata__Einstein_Bot_Escalation__c</fullName>
    <description>Einstein Bot Escalation Outcome</description>
    <inlineHelpText>Einstein Bot Escalation Outcome</inlineHelpText>
    <label>Einstein Bot Escalation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Successful</fullName>
            </value>
            <value>
                <fullName>No Agents Available</fullName>
            </value>
            <value>
                <fullName>Missed Chat</fullName>
            </value>
            <value>
                <fullName>Initiated</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Case Already Created</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>