unpackaged/main/default/objects/ebotdata__Bot_Session__c/fields/ebotdata__Einstein_Bot_Escalation_Requested__c.field-meta.xml
<CustomField>
    <fullName>ebotdata__Einstein_Bot_Escalation_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Boolean value to represent if the user talking to the bot requests an agent escalation</description>
    <label>DO NOT USE - Escalation Requested</label>
    <type>Checkbox</type>
</CustomField>