unpackaged/main/default/objects/ebotdata__Bot_Session__c/fields/ebotdata__Einstein_Bot_Escalation_Successful__c.field-meta.xml
<CustomField>
    <fullName>ebotdata__Einstein_Bot_Escalation_Successful__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Boolean value to represent if there is a successful escalation from the Einstein Bot</description>
    <label>Einstein Bot Escalation Successful</label>
    <type>Checkbox</type>
</CustomField>