unpackaged/main/default/objects/ebotdata__Bot_Session__c/fields/ebotdata__Error_Details__c.field-meta.xml
<CustomField>
    <fullName>ebotdata__Error_Details__c</fullName>
    <label>Error Details</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>