unpackaged/main/default/objects/ebotdata__Bot_Session__c/fields/ebotdata__Escalation_Breakdown__c.field-meta.xml
<CustomField>
    <fullName>ebotdata__Escalation_Breakdown__c</fullName>
    <formula>IF(ebotdata__Outcome__c = &quot;Attempted to Escalate&quot; &amp;&amp; ebotdata__Business_Dialog_Reached__c = true, &quot;By Design&quot;, IF(ebotdata__Outcome__c == &quot;Attempted to Escalate&quot; &amp;&amp; ebotdata__Business_Dialog_Reached__c = false, &quot;Not By Design&quot;, NULL))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Escalation Breakdown</label>
    <type>Text</type>
</CustomField>