unpackaged/main/default/objects/ebotdata__Bot_Session__c/fields/ebotdata__Escalation_By_Design__c.field-meta.xml
<CustomField>
    <fullName>ebotdata__Escalation_By_Design__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Escalation By Design</label>
    <type>Checkbox</type>
</CustomField>