unpackaged/main/default/objects/ebotdata__Bot_Session__c/fields/ebotdata__Escalation_End_Reached__c.field-meta.xml
<CustomField>
    <fullName>ebotdata__Escalation_End_Reached__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is set to true by BotSetMetricInfoOnChatLogs Trigger Code when a Chat Log with Escalation End Metric is encountered</description>
    <inlineHelpText>Set to true when a Chat Log with Escalation End Metric is created</inlineHelpText>
    <label>Escalation End Reached</label>
    <type>Checkbox</type>
</CustomField>