unpackaged/main/default/objects/ebotdata__Bot_Session__c/fields/ebotdata__Escalation_Outcome__c.field-meta.xml
<CustomField>
    <fullName>ebotdata__Escalation_Outcome__c</fullName>
    <formula>IF(ebotdata__Einstein_Bot_Escalation_Successful__c = true, &quot;Successful&quot;, IF(ebotdata__Einstein_Bot_Escalation_Successful__c = false &amp;&amp; ebotdata__Outcome__c = &quot;Attempted to Escalate&quot;, &quot;Unsuccessful&quot;, NULL))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DO NOT USE - Escalation Outcome</label>
    <type>Text</type>
</CustomField>