unpackaged/main/default/objects/ebotdata__Bot_Session__c/fields/ebotdata__Escalation_Reason__c.field-meta.xml
<CustomField>
    <fullName>ebotdata__Escalation_Reason__c</fullName>
    <description>CR-85 -- Denotes if escalation was by design or not by design</description>
    <label>Escalation Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>By Design</fullName>
            </value>
            <value>
                <fullName>Not By Design</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>