unpackaged/main/default/objects/ebotdata__Bot_Session__c/fields/ebotdata__Invocation_URL__c.field-meta.xml
<CustomField>
    <fullName>ebotdata__Invocation_URL__c</fullName>
    <description>This field stores the URL of the page from which chat was initiated. It is filled via pre-chat form.</description>
    <inlineHelpText>This field stores the URL of the page from which chat was initiated.</inlineHelpText>
    <label>Invocation URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>