unpackaged/main/default/objects/ebotdata__Bot_Session__c/fields/ebotdata__IsRequestedEscalation__c.field-meta.xml
<CustomField>
    <fullName>ebotdata__IsRequestedEscalation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DO NOT USE - IsRequestedEscalation</label>
    <type>Checkbox</type>
</CustomField>