unpackaged/main/default/objects/ebotdata__Bot_Session__c/fields/ebotdata__IsSuccessfulEscalation__c.field-meta.xml
<CustomField>
    <fullName>ebotdata__IsSuccessfulEscalation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DO NOT USE - IsSuccessfulEscalation</label>
    <type>Checkbox</type>
</CustomField>