unpackaged/main/default/objects/ebotdata__Bot_Session__c/fields/ebotdata__IsUnsuccessfulEscalation__c.field-meta.xml
<CustomField>
    <fullName>ebotdata__IsUnsuccessfulEscalation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DO NOT USE - IsUnsuccessfulEscalation</label>
    <type>Checkbox</type>
</CustomField>