unpackaged/main/default/objects/ebotdata__Bot_Session__c/fields/ebotdata__Lead__c.field-meta.xml
<CustomField>
    <fullName>ebotdata__Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Bot Sessions</relationshipLabel>
    <relationshipName>Bot_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>