unpackaged/main/default/objects/ebotdata__Bot_Session__c/fields/ebotdata__Live_Agent_Session_Id__c.field-meta.xml
<CustomField>
    <fullName>ebotdata__Live_Agent_Session_Id__c</fullName>
    <description>Live Agent Session Id</description>
    <inlineHelpText>Live Agent Session Id</inlineHelpText>
    <label>Live Agent Session Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>