unpackaged/main/default/objects/ebotdata__Bot_Session__c/fields/ebotdata__Live_Chat_Transcript__c.field-meta.xml
<CustomField>
    <fullName>ebotdata__Live_Chat_Transcript__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Live Chat Transcript</description>
    <inlineHelpText>Live Chat Transcript</inlineHelpText>
    <label>Live Chat Transcript</label>
    <referenceTo>LiveChatTranscript</referenceTo>
    <relationshipLabel>Einstein Bot Chat Session</relationshipLabel>
    <relationshipName>Einstein_Bot_Chat_Session</relationshipName>
    <type>Lookup</type>
</CustomField>