unpackaged/main/default/objects/ebotdata__Bot_Session__c/fields/ebotdata__LiveChatTranscriptId__c.field-meta.xml
<CustomField>
    <fullName>ebotdata__LiveChatTranscriptId__c</fullName>
    <label>DO NOT USE - LiveChatTranscriptId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>