unpackaged/main/default/objects/ebotdata__Bot_Session__c/fields/ebotdata__Outcome__c.field-meta.xml
<CustomField>
    <fullName>ebotdata__Outcome__c</fullName>
    <formula>IF( ISBLANK( TEXT(ebotdata__Einstein_Bot_Escalation__c)) = FALSE, &quot;Attempted to Escalate&quot;, &quot;Case Deflection&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Outcome</label>
    <type>Text</type>
</CustomField>