unpackaged/main/default/objects/ebotdata__Bot_Session__c/fields/ebotdata__Pre_Bot_Deployment_Date__c.field-meta.xml
<CustomField>
    <fullName>ebotdata__Pre_Bot_Deployment_Date__c</fullName>
    <formula>ebotdata__Bot_Deployment_Date__c  - 30</formula>
    <label>Pre-Bot Deployment Date</label>
    <type>Date</type>
</CustomField>