unpackaged/main/default/objects/ebotdata__Bot_Session__c/fields/ebotdata__Report_Agent_Handle_Time__c.field-meta.xml
<CustomField>
    <fullName>ebotdata__Report_Agent_Handle_Time__c</fullName>
    <formula>IF(
ebotdata__Agent_Handle_Time__c &gt; 0 &amp;&amp; ebotdata__Outcome__c ==&quot;Attempted to Escalate&quot; &amp;&amp; TEXT(ebotdata__Einstein_Bot_Escalation__c)== &quot;Successful&quot; ,


ebotdata__Live_Chat_Transcript__r.ChatDuration - ebotdata__Agent_Wait_Time__c - ebotdata__Einstein_Bot_Duration__c ,
0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Report Agent Handle Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>