unpackaged/main/default/objects/ebotdata__Bot_Session__c/fields/ebotdata__Report_Agent_Wait_Time__c.field-meta.xml
<CustomField>
    <fullName>ebotdata__Report_Agent_Wait_Time__c</fullName>
    <formula>IF(
 ebotdata__Outcome__c  ==&quot;Attempted to Escalate&quot; &amp;&amp; TEXT(ebotdata__Einstein_Bot_Escalation__c)== &quot;Successful&quot; ,


ebotdata__Agent_Wait_Time__c ,
0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Report Agent Wait Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>