unpackaged/main/default/objects/ebotdata__Bot_Session__c/fields/ebotdata__Self_Served_Dialog_Reached__c.field-meta.xml
<CustomField>
    <fullName>ebotdata__Self_Served_Dialog_Reached__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Boolean value evaluated by the Einstein Bot Reporting Batch, if checked the transcript has lived through the self served dialog intent</description>
    <label>Self Served Dialog Reached</label>
    <type>Checkbox</type>
</CustomField>