unpackaged/main/default/objects/ebotdata__Bot_Session__c/fields/ebotdata__SessionEndType__c.field-meta.xml
<CustomField>
    <fullName>ebotdata__SessionEndType__c</fullName>
    <label>SessionEndType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>