unpackaged/main/default/objects/ebotdata__Bot_Session__c/fields/ebotdata__Successful_Resolution__c.field-meta.xml
<CustomField>
    <fullName>ebotdata__Successful_Resolution__c</fullName>
    <label>Successful Resolution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>No Response</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
                <isActive>false</isActive>
                <label>N/A</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>