unpackaged/main/default/objects/ebotdata__Bot_Session__c/fields/ebotdata__System_Wait_Time__c.field-meta.xml
<CustomField>
    <fullName>ebotdata__System_Wait_Time__c</fullName>
    <description>The time system taken to find a available agent once the user request escalation</description>
    <label>System Wait Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>