unpackaged/main/default/objects/ebotdata__Bot_Session__c/fields/ebotdata__Visitor_Contact__c.field-meta.xml
<CustomField>
    <fullName>ebotdata__Visitor_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Visitor Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Einstein Bot Chat Session</relationshipLabel>
    <relationshipName>Einstein_Bot_Chat_Session</relationshipName>
    <type>Lookup</type>
</CustomField>