unpackaged/main/default/objects/ebotdata__Bot_Session__c/fields/ebotdata__Visitor_Message_Count__c.field-meta.xml
<CustomField>
    <fullName>ebotdata__Visitor_Message_Count__c</fullName>
    <description>Visitor Message Count</description>
    <formula>ebotdata__Live_Chat_Transcript__r.VisitorMessageCount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Visitor Message Count</inlineHelpText>
    <label>Visitor Message Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>