unpackaged/main/default/objects/ebotdata__Bot_Session__c/fields/MinicardPayload__c.field-meta.xml
<CustomField>
    <fullName>MinicardPayload__c</fullName>
    <label>MinicardPayload</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>