unpackaged/main/default/objects/ebotdata__Bot_Session__c/fields/Visitor_Feedback_Intent__c.field-meta.xml
<CustomField>
    <fullName>Visitor_Feedback_Intent__c</fullName>
    <label>Visitor Feedback Intent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>