unpackaged/main/default/objects/ebotdata__Bot_Session__c/fields/Visitor_Feedback_Result__c.field-meta.xml
<CustomField>
    <fullName>Visitor_Feedback_Result__c</fullName>
    <label>Visitor Feedback Result</label>
    <length>128</length>
    <type>Text</type>
</CustomField>