unpackaged/main/default/objects/ebotdata__Bot_Session__c/listViews/ebotdata__All.listView-meta.xml
<ListView>
    <fullName>ebotdata__All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Brand__c</columns>
    <columns>ebotdata__Live_Chat_Transcript__c</columns>
    <columns>ebotdata__Visitor_Message_Count__c</columns>
    <columns>ebotdata__Case__c</columns>
    <columns>ebotdata__Agent_Handle_Time__c</columns>
    <columns>ebotdata__Escalation_Breakdown__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>