unpackaged/main/default/objects/ebotdata__Bot_Session__c/listViews/ebotdata__With_Details.listView-meta.xml
<ListView>
    <fullName>ebotdata__With_Details</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>ebotdata__Einstein_Bot_Escalation__c</columns>
    <columns>ebotdata__Einstein_Bot_Duration__c</columns>
    <columns>ebotdata__Live_Chat_Transcript__c</columns>
    <columns>ebotdata__Self_Served_Dialog_Reached__c</columns>
    <columns>ebotdata__Business_Dialog_Reached__c</columns>
    <columns>Brand__c</columns>
    <filterScope>Everything</filterScope>
    <label>With Details</label>
</ListView>